Se modifico el index

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="#services">Services</a>
         <a href="#education">Education</a>
         <a href="#works">Works</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">Contacto</a>
       </div>
     </div>
   </nav>
