Se cambio la foto de brayan

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="#services">Services</a>
         <a href="#education">Education</a>
         <a href="#works">Works</a>
-        <a href="#contact">Contacto</a>
+        <a href="#contact">Contact</a>
       </div>
     </div>
   </nav>
@@ -70,9 +70,9 @@
     <div class="inner-width">
       <h1 class="section-title">About</h1>
       <div class="about-content">
-        <img src="images/pic.png" alt="" class="about-pic">
+        <img src="images/brayan.jpg" alt="" class="about-pic">
         <div class="about-text">
-          <h2>Hi! I'm Darkcode</h2>
+          <h2>Hi! I'm Brayan</h2>
           <h3>
             <span>Developer</span>
             <span>Designer</span>
@@ -330,7 +330,7 @@
   <footer>
     <div class="inner-width">
       <div class="copyright">
-        &copy; 2020 | Created & Designed By <a href="#">darkcode</a>
+        &copy; 2020 | Created & Designed By <a href="#">Brayan</a>
       </div>
       <div class="sm">
         <a href="#" class="fab fa-facebook-f"></a>
